Name:		simann
Version:	0.0
Synopsis:	Wrapper for GSL simulated annealing routine
Description: 	Haskell FFI Wrapper for gsl_siman.  
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Depends:	base>4
Build-Type: 	Simple

hs-source-dirs: src
ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
ghc-prof-options: -caf-all -auto-all

Exposed-Modules: 
		 HEP.Minimizer.GSLSimulatedAnnealing
		 HEP.Minimizer.GSLSimulatedAnnealing.Annealing
		 HEP.Minimizer.GSLSimulatedAnnealing.Type
		 HEP.Minimizer.GSLSimulatedAnnealing.Internal

Extra-source-files: csrc/simann.h

Extensions:	 ForeignFunctionInterface

Install-includes: csrc/simann.h
C-sources: 	csrc/simann.c

extra-lib-dirs: /Users/iankim/mac/usr/lib/
include-dirs: /Users/iankim/mac/usr/include/
extra-libraries: gsl, gslcblas   

-- cc-options: -fnested-functions


Include-dirs: 	csrc/
--		$(ROOTSYS)/include 
--		/home/wavewave/nfs/root/include



--extra-lib-dirs: /home/wavewave/nfs/root/lib
--extra-libraries: stdc++,   
